Views a11y: Add comment to explain usage of AXNodeData's |state| member.

AXNodeData::state is a bitmask used for setting accessible state flags such as
ui::AX_STATE_DISABLED. It is initialised to 0xFFFFFF, which turns all flags on.
This is done in order to more easily catch bugs where no flags are set at all -
it must be cleared to 0x0 before use. Add a comment explaining this.

BUG=668569

Review-Url: https://codereview.chromium.org/2528103002
Cr-Commit-Position: refs/heads/master@{#435020}

Former-commit-id: 2f4e229335d9aa02d6a90307537fef92ba8be091